@@ -10,6 +10,9 @@
 	<li>Added two exceptions to the LGPL to support static
 	linking of applications against Mini-XML.</li>
 
+	<li>Added the _CRT_SECURE_NO_DEPRECATE definition when
+	building on VC++ 2005 (STR #36)</li>
+
 	<li>mxmlLoad*() did not detect missing > characters in
 	elements (STR #41)</li>
 
