@@ -5,6 +5,8 @@ CHANGES IN Mini-XML 2.3
 
 	- Added two exceptions to the LGPL to support static
 	  linking of applications against Mini-XML.
+	- Added the _CRT_SECURE_NO_DEPRECATE definition when
+	  building on VC++ 2005 (STR #36)
 	- mxmlLoad*() did not detect missing > characters in
 	  elements (STR #41)
 	- mxmlLoad*() did not detect missing close tags at the end
